--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="logo_content_description">Logo of University of Toronto Scarborough</string>
 
     <!-- Front page -->
-    <string name="front_page_admin_login">Admin Login</string>
-    <string name="front_page_student_login">Student Login</string>
+    <string name="front_page_admin_login">Admin</string>
+    <string name="front_page_student_login">Student</string>
     <string name="front_page_signup">Sign Up</string>
     <string name="front_page_title">Course Manager</string>
 
@@ -20,10 +20,10 @@
     <string name="student_login_submit_text">Login</string>
 
     <!-- Student registration page  -->
-    <string name="student_signup_submit_text">Signup</string>
+    <string name="student_signup_submit_text">Finish</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="utsc_logo">UTSC Logo</string>
 </resources>
