--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
 
     <!-- Student registration page  -->
     <string name="student_signup_submit_text">Finish</string>
+    <string name="admin_checkbox_text">Admin</string>
+    <string name="student_checkbox_text">Student</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
