--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="utsc_logo">UTSC Logo</string>
+    <string name="course_codes">Course Codes:</string>
+    <string name="course_offering">Course Offering</string>
 </resources>
