--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,17 @@
     <!-- Student registration page  -->
     <string name="student_signup_submit_text">Finish</string>
 
+    <!-- Admin course add page -->
+    <string name="admin_course_add_header">Course Info:</string>
+    <string name="admin_course_add_name_hint">Enter course name</string>
+    <string name="admin_course_add_code_hint">Enter course code</string>
+    <string name="admin_course_add_prerequisites_hint">Select prerequisites</string>
+    <string name="admin_course_add_offering_sessions_header">Offering Sessions:</string>
+    <string name="admin_course_add_fall">Fall</string>
+    <string name="admin_course_add_winter">Winter</string>
+    <string name="admin_course_add_summer">Summer</string>
+
+
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
